--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ db_host = us-cdbr-east-06.cleardb.net
 db_name = heroku_ffb364e791a518d
 db_user = ba6297b7ad8c5a
 db_pass = 57ee2abc
-public_url = https://apiherokuasenjo.herokuapp.com/
+public_url = https://apibancoasenjopino.herokuapp.com/
 jwt_secret = _%Pr1v4t3*KEy_@
 mail_user = 977165215bdf53
 mail_pass = db1bec7fd27a08
